@@ -8,6 +8,9 @@ Changes in version 0.97
 
 - Internal MIME headers are now stripped from multipart messages.
 
+- Added support for limiting the number of lines copied from the
+  original message body.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
